# GPTtranslator

./: .gitignore  AGENTS.md  Makefile  README.md  REVIEW_REPORT.md  pyproject.toml
prompts/: README.md  editorial_pass.prompt.md  terminology_check.prompt.md  translate_chunk.prompt.md  translate_system.prompt.txt
scripts/: dev_install.sh  install.sh  uninstall.sh
src/gpttranslator/: __init__.py  __main__.py  cli.py
src/gpttranslator/app/: __init__.py  cli_app.py
src/gpttranslator/app/commands/: __init__.py  budget.py  build.py  common.py  extract.py  glossary.py  help.py  init.py  inspect.py  qa.py  registry.py  status.py  translate.py  version.py
src/gpttranslator/app/core/: __init__.py  config.py  logging.py  manifest.py  models.py  paths.py  reporting.py  state.py
src/gpttranslator/app/memory/: __init__.py  glossary_manager.py  style_guide_manager.py  translation_memory_manager.py
src/gpttranslator/app/pdf/: __init__.py  document_graph.py  extractor.py  ingestion.py  inspector.py  ocr.py  service.py
src/gpttranslator/app/qa/: __init__.py  service.py
src/gpttranslator/app/render/: __init__.py  assets.py  composer.py  pdf_writer.py  service.py  typesetter.py
src/gpttranslator/app/translation/: __init__.py  batching.py  chunker.py  codex_backend.py  consistency.py  editor.py  protocol.py
src/gpttranslator/app/translation/backends/: __init__.py  base.py  codex_cli.py
src/gpttranslator/app/translation/economy/: __init__.py  adaptive.py  budget.py  complexity.py  context.py  dedupe.py  planner.py  prefilter.py  profiles.py  retry.py  service.py  tm.py
src/gpttranslator/app/utils/: __init__.py  shell.py
src/gpttranslator/prompt_assets/: __init__.py  chapter_summary.prompt.md  glossary_update_proposal.prompt.md  semantic_qa.prompt.md
tests/: _pdf_test_utils.py  test_batching.py  test_build_command.py  test_chunker.py  test_cli_smoke.py  test_codex_backend.py  test_codex_protocol.py  test_document_graph.py  test_economy_layer.py  test_editor_consistency.py  test_extract_command.py  test_fixture_pdfs.py  test_glossary_command.py  test_init_command.py  test_inspect_command.py  test_integration_smoke_pipeline.py  test_memory_managers.py  test_packaging_metadata.py  test_pdf_extractor.py  test_pdf_inspector.py  test_pdf_ocr.py  test_prompt_templates.py  test_qa.py  test_status_command.py  test_translate_command.py  test_typesetter_reflow.py
tests/fixtures/: mock_codex_cli.py
tests/fixtures/codex_job_example/: input.json  meta.json  output.json  prompt.md  raw_stderr.txt  raw_stdout.txt
