[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpttranslator"
version = "0.1.0"
description = "Minimalist terminal CLI shell for GPTtranslate"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GPTtranslate Team" }]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pypdf>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
gpttranslator = "gpttranslator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
