[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpttranslator"
version = "0.1.0"
description = "Minimalist terminal CLI shell for GPTtranslate"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GPTtranslate Team" }]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "pypdf>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
]

[project.scripts]
gpttranslator = "gpttranslator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "workspace",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
